--- a/task/index.html
+++ b/task/index.html
@@ -7,6 +7,15 @@
     <title>task</title>
 </head>
 <body>
-    <script src="script.js"></script>
+
+    
+    <script src="arrDivied.js"></script>
+    <script src="puzzle.js"></script>
+    <script src="subArray.js"></script>
+
+
 </body>
 </html>
+
+
+
